# svg2unicode

./: .gitignore  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  test.sh
scripts/: svg2ascii.sh  svg2emoji.sh  svg2font  svg2icon  svg2pong  svg2txt  svg2txt.py  svg2uchar
svg2unicode/: README.md  __init__.py  cli.py  converter.py
